# simple-scheduler

./: .gitignore  LICENSE  README.md  README.rst  data.csv  flit.ini  gantt.py  pyproject.toml  requirements.txt  simple_plot.py
example/: example.csv
projectscheduler/: __init__.py  gantt.py  main.py  plot.py
